# fronius-power-monitor

./: Cargo.toml  README.md
src/: influx_data_handler.rs  main.rs  power_data_collector.rs
src/json/: active_device_structs.rs  config_structs.rs  inverter_info_structs.rs  inverter_structs.rs  meter_structs.rs  powerflow_structs.rs  storage_structs.rs
systemd/: fronius-power-monitor.config  fronius-power-monitor.service
