[package]
name = "fronius_power_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.46"
http = "1.1.0"
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
influxdb2 = "0.5.0"
futures = "0.3.30"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
url = "2.5.0"
reqwest = { version = "0.12.4", features = ["json"] }
error-chain = "0.12.4"
toml = "0.8.12"
